third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-mut-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-mut-src-not-a-reference.rs:17:53
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ---------------^^^^^^-
   |                                      |              |
   |                                      |              expected `&mut _`, found `usize`
   |                                      |              help: consider mutably borrowing here: `&mut 0usize`
   |                                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                           found type `usize`
